--- a/box/pom.xml
+++ b/box/pom.xml
@@ -1,119 +1,187 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <artifactId>wiab</artifactId>
-        <groupId>org.waveprotocol.box</groupId>
-        <version>0.3-SNAPSHOT</version>
-    </parent>
+<project
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+  xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <artifactId>wiab</artifactId>
     <groupId>org.waveprotocol.box</groupId>
-    <artifactId>box</artifactId>
     <version>0.3-SNAPSHOT</version>
-    <name>box</name>
-    <url>http://maven.apache.org</url>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.waveprotocol.box</groupId>
-            <artifactId>model</artifactId>
-            <version>${project.version}</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.waveprotocol.box</groupId>
-            <artifactId>util</artifactId>
-            <version>${project.version}</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.waveprotocol.box</groupId>
-            <artifactId>proto</artifactId>
-            <version>${project.version}</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.waveprotocol.box</groupId>
-            <artifactId>crypto</artifactId>
-            <version>${project.version}</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.waveprotocol.box</groupId>
-            <artifactId>communication</artifactId>
-            <version>${project.version}</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.waveprotocol.box</groupId>
-            <artifactId>common</artifactId>
-            <version>${project.version}</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.waveprotocol.box</groupId>
-            <artifactId>federation</artifactId>
-            <version>${project.version}</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>jline</groupId>
-            <artifactId>jline</artifactId>
-            <version>0.9.94</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-servlets</artifactId>
-            <version>${jetty.version}</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-server</artifactId>
-            <version>${jetty.version}</version>
-            <type>jar</type>
-        </dependency>
-      <dependency>
-        <groupId>org.mongodb</groupId>
-        <artifactId>mongo-java-driver</artifactId>
-        <version>2.4</version>
-        <type>jar</type>
-      </dependency>
-      <dependency>
-        <groupId>org.waveprotocol.box</groupId>
-        <artifactId>api</artifactId>
-        <version>${project.version}</version>
-        <type>jar</type>
-      </dependency>
-      <dependency>
-        <groupId>com.google.gxp</groupId>
-        <artifactId>google-gxp</artifactId>
-        <version>0.2.4-beta</version>
-        <type>jar</type>
-      </dependency>
-      <dependency>
-        <groupId>javax.inject</groupId>
-        <artifactId>javax.inject</artifactId>
-        <version>1</version>
-        <type>jar</type>
-      </dependency>
-      <dependency>
-        <groupId>org.waveprotocol.box</groupId>
-        <artifactId>client</artifactId>
-        <version>${project.version}</version>
-        <type>jar</type>
-      </dependency>
-    </dependencies>
-    <repositories>
-        <repository>
-            <id>wave-local</id>
-            <layout>default</layout>
-            <name>wave local</name>
-            <url>file:///${basedir}/../repo/</url>
-        </repository>    
-    </repositories>
-    
+  </parent>
+
+  <artifactId>box</artifactId>
+  <name>Box</name>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.waveprotocol.box</groupId>
+      <artifactId>model</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.waveprotocol.box</groupId>
+      <artifactId>util</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.waveprotocol.box</groupId>
+      <artifactId>proto</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.waveprotocol.box</groupId>
+      <artifactId>crypto</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.waveprotocol.box</groupId>
+      <artifactId>communication</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.waveprotocol.box</groupId>
+      <artifactId>common</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.waveprotocol.box</groupId>
+      <artifactId>federation</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.waveprotocol.box</groupId>
+      <artifactId>wave-api</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.waveprotocol.box</groupId>
+      <artifactId>client</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.waveprotocol.box</groupId>
+      <artifactId>gwt-util</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>jline</groupId>
+      <artifactId>jline</artifactId>
+      <version>0.9.94</version>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-servlets</artifactId>
+      <version>${jetty.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-webapp</artifactId>
+      <version>${jetty.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-websocket</artifactId>
+      <version>${jetty.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-server</artifactId>
+      <version>${jetty.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongo-java-driver</artifactId>
+      <version>2.4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.gxp</groupId>
+      <artifactId>google-gxp</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.inject</groupId>
+      <artifactId>javax.inject</artifactId>
+      <version>1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.inject.extensions</groupId>
+      <artifactId>guice-servlet</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.google.inject.extensions</groupId>
+      <artifactId>guice-assisted-inject</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.glines.socketio</groupId>
+      <artifactId>socketio-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.glines.socketio.extension</groupId>
+      <artifactId>socketio-gwt</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.glines.socketio.extension</groupId>
+      <artifactId>socketio-jetty</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.igniterealtime</groupId>
+      <artifactId>tinder</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.igniterealtime</groupId>
+      <artifactId>whack</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>jivesoftware</groupId>
+      <artifactId>smack</artifactId>
+      <version>3.1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.gxp</groupId>
+      <artifactId>google-gxp</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client</artifactId>
+      <version>1.9.0-beta</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+    </dependency>
+  </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>generate-sources</phase>
+            <configuration>
+              <tasks>
+                <taskdef name="gxpc"
+                  classname="com.google.gxp.compiler.ant.GxpcTask"
+                  classpathref="maven.compile.classpath" />
+                <gxpc srcdir="${basedir}/src/main/java" srcpaths="${basedir}/src/main/java"
+                  destdir="${basedir}/target/generated-sources" target="org.waveprotocol.box.server.gxp"
+                  i18nwarn="false" />
+                <copy todir="${basedir}/src/main/java">
+                  <fileset dir="${basedir}/target/generated-sources" />
+                </copy>
+              </tasks>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
