--- a/crypto/pom.xml
+++ b/crypto/pom.xml
@@ -1,32 +1,31 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+  xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>wiab</artifactId>
     <groupId>org.waveprotocol.box</groupId>
     <version>0.3-SNAPSHOT</version>
   </parent>
-  <groupId>org.waveprotocol.box</groupId>
+
   <artifactId>crypto</artifactId>
-  <version>0.3-SNAPSHOT</version>
-  <name>crypto</name>
-  <url>http://maven.apache.org</url>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+  <name>Cryptography</name>
+
   <dependencies>
-      <dependency>
+    <dependency>
       <groupId>org.waveprotocol.box</groupId>
       <artifactId>proto</artifactId>
       <version>${project.version}</version>
-      <type>jar</type>
-      </dependency>
+    </dependency>
     <dependency>
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
-      <version>1.4</version>
-      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>com.google.collections</groupId>
+      <artifactId>google-collections</artifactId>
     </dependency>
   </dependencies>
+
 </project>
