--- a/federation/pom.xml
+++ b/federation/pom.xml
@@ -1,75 +1,55 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <artifactId>wiab</artifactId>
-        <groupId>org.waveprotocol.box</groupId>
-        <version>0.3-SNAPSHOT</version>
-    </parent>
+<project
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+  xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <artifactId>wiab</artifactId>
     <groupId>org.waveprotocol.box</groupId>
-    <artifactId>federation</artifactId>
     <version>0.3-SNAPSHOT</version>
-    <name>federation</name>
-    <url>http://maven.apache.org</url>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.waveprotocol.box</groupId>
-            <artifactId>proto</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>dom4j</groupId>
-            <artifactId>dom4j</artifactId>
-            <version>1.6.1</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-            <version>1.6</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.igniterealtime</groupId>
-            <artifactId>tinder</artifactId>
-            <version>1.2.3</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.igniterealtime</groupId>
-            <artifactId>whack</artifactId>
-            <version>1.0.0</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.waveprotocol.box</groupId>
-            <artifactId>model</artifactId>
-            <version>${project.version}</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.waveprotocol.box</groupId>
-            <artifactId>util</artifactId>
-            <version>${project.version}</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-            <version>1.4</version>
-            <type>jar</type>
-        </dependency>
-    </dependencies>
-    <repositories>
-        <repository>
-            <id>wave-local</id>
-            <layout>default</layout>
-            <name>wave local</name>
-            <url>file:///${basedir}/../repo/</url>
-        </repository>    
-    </repositories>
+  </parent>
+
+  <artifactId>federation</artifactId>
+  <name>Federation</name>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.waveprotocol.box</groupId>
+      <artifactId>proto</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.waveprotocol.box</groupId>
+      <artifactId>model</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.waveprotocol.box</groupId>
+      <artifactId>util</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>dom4j</groupId>
+      <artifactId>dom4j</artifactId>
+      <version>1.6.1</version>
+    </dependency>
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.igniterealtime</groupId>
+      <artifactId>tinder</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.igniterealtime</groupId>
+      <artifactId>whack</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+    </dependency>
+  </dependencies>
+
 </project>
