--- a/proto/pom.xml
+++ b/proto/pom.xml
@@ -18,6 +18,11 @@
       <artifactId>protobuf-java</artifactId>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>com.googlecode.protobuf-java-format</groupId>
+      <artifactId>protobuf-java-format</artifactId>
+      <version>1.2</version>
+    </dependency>
   </dependencies>
 
   <build>
