--- a/box/pom.xml
+++ b/box/pom.xml
@@ -108,7 +108,7 @@
     </dependency>
     <dependency>
       <groupId>com.google.inject.extensions</groupId>
-      <artifactId>guice-assisted-inject</artifactId>
+      <artifactId>guice-assistedinject</artifactId>
     </dependency>
     <dependency>
       <groupId>com.glines.socketio</groupId>
