--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <gwt.version>2.4.0</gwt.version>
     <jetty.version>8.1.3.v20120416</jetty.version>
     <socketio.version>0.1-SNAPSHOT</socketio.version>
-    <guice.version>2.0</guice.version>
+    <guice.version>3.0</guice.version>
   </properties>
 
   <modules>
@@ -83,7 +83,7 @@
       </dependency>
       <dependency>
         <groupId>com.google.inject.extensions</groupId>
-        <artifactId>guice-assisted-inject</artifactId>
+        <artifactId>guice-assistedinject</artifactId>
         <version>${guice.version}</version>
       </dependency>
       <dependency>
