--- a/box/pom.xml
+++ b/box/pom.xml
@@ -66,6 +66,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>jline</groupId>
@@ -213,17 +214,47 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>gwt-maven-plugin</artifactId>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>1.6</version>
         <executions>
           <execution>
-            <configuration>
-              <extraJvmArgs>-Xmx512M -Xss1024k</extraJvmArgs>
-              <module>org.waveprotocol.box.webclient.WebClientProd</module>
-            </configuration>
+            <phase>package</phase>
             <goals>
-              <goal>compile</goal>
+              <goal>shade</goal>
             </goals>
+            <configuration>
+              <minimizeJar>false</minimizeJar>
+              <transformers>
+                <transformer
+                  implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>org.waveprotocol.box.server.ServerMain</mainClass>
+                </transformer>
+              </transformers>
+              <filters>
+                <filter>
+                  <artifact>org.eclipse.jetty:*</artifact>
+                  <excludes>
+                    <exclude>META-INF/ECLIPSEF.SF</exclude>
+                    <exclude>META-INF/ECLIPSEF.RSA</exclude>
+                  </excludes>
+                </filter>
+                <filter>
+                  <artifact>org.eclipse.jetty.orbit:*</artifact>
+                  <excludes>
+                    <exclude>META-INF/ECLIPSEF.SF</exclude>
+                    <exclude>META-INF/ECLIPSEF.RSA</exclude>
+                  </excludes>
+                </filter>
+              </filters>
+              <artifactSet>
+                <excludes>
+                  <exclude>org.apache.ant:*</exclude>
+                  <exclude>org.hamcrest:*</exclude>
+                  <exclude>org.mockito:*</exclude>
+                </excludes>
+              </artifactSet>
+            </configuration>
           </execution>
         </executions>
       </plugin>
