--- a/box/pom.xml
+++ b/box/pom.xml
@@ -165,6 +165,11 @@
       <artifactId>java-websocket-client</artifactId>
       <version>hyxie-75</version>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.3</version>
+    </dependency>
   </dependencies>
 
   <build>
