Changed build-proto.properties to a more common setting.
Signed-off-by: Paulo Pires <pjpires@gmail.com>

--- a/build-proto.properties
+++ b/build-proto.properties
@@ -1,2 +1,6 @@
 # Path to the unpacked and compiled protoc distribution
+# Ubuntu/Linux Mint with protobuf-compiler installed
+protoc_dist=/usr# Ubuntu/Linux Mint with protobuf-compiler installed
+
+# Mac OS X with protobuf installed with brew
 protoc_dist=/usr/local/Cellar/protobuf/2.4.1
