--- a/build-proto.properties
+++ b/build-proto.properties
@@ -1,6 +1,6 @@
 # Path to the unpacked and compiled protoc distribution
 # Ubuntu/Linux Mint with protobuf-compiler installed
-protoc_dist=/usr# Ubuntu/Linux Mint with protobuf-compiler installed
+# protoc_dist=/usr
 
 # Mac OS X with protobuf installed with brew
-protoc_dist=/usr/local/Cellar/protobuf/2.4.1
+# protoc_dist=/usr/local/Cellar/protobuf/2.4.1
