Added source jar attachements to the modules to allow for GWT compilation.

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -47,5 +47,12 @@
       <artifactId>gwt-dev</artifactId>
     </dependency>
   </dependencies>
-
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 </project>
