--- a/crypto/pom.xml
+++ b/crypto/pom.xml
@@ -27,5 +27,13 @@
       <artifactId>guava</artifactId>
     </dependency>
   </dependencies>
-
+  
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 </project>
