--- a/media/pom.xml
+++ b/media/pom.xml
@@ -24,5 +24,13 @@
       <version>${project.version}</version>
     </dependency>
   </dependencies>
-
+  
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 </project>
